# gxmpp

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  Client.java  Makefile  README.md  client.cc  cn_ikanke_Client.h  gxmpp.h
example/: main.cc  xmpptasks.h  xmppthread.cc
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  chat_main.cc  chatapp.cc  chatapp.h  consoletask.cc  textchatreceivetask.cc  textchatsendtask.cc
examples/echo/: CMakeLists.txt  client.h  client.mm  echothread.cc  echothread.cc~  echothread.h  echothread.h~  main.cc  main.cc~  main.cpp  main.mm  receivetask.cc  receivetask.h  rosterhandler.cc  rosterhandler.h  roterhandler.cc  sendtask.cc  sendtask.h  xmpppump.cc  xmpppump.h
examples/hello/: CMakeLists.txt  main.cc  xmpppump.cc  xmpppump.h  xmpptasks.cc  xmppthread.h
gxmpp/: CMakeLists.txt  pumpthread.cc  pumpthread.h  xmpppump.cc  xmpppump.h  xmppthread.cc  xmppthread.h
gxmpp.xcodeproj/: project.pbxproj
gxmpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gxmpp.xcodeproj/project.xcworkspace/xcshareddata/: gxmpp.xccheckout
talk/: CMakeLists.txt
talk/base/: CMakeLists.txt  includes.hhcc  includes.hhcc~  ipaddress.cc  maccocoathreadhelper.mm  messagequeue.cc  physicalsocketserver.cc  scoped_autorelease_pool.mm
talk/base/nouse/: opensslidentity.cc
talk/examples/chat/: c.sh  chat_main.cc  chatapp.cc  chatapp.h
talk/examples/login/: login_main.cc
talk/old/base/: c.sh  includes.hh  physicalsocketserver.cc
talk/old/base/nouse/: fileutils.cc  (+1 more)
talk/old/xmpp/: c.sh  includes.hh  pingtask.cc  pingtask.h  xmppclientsettings.h
talk/xmllite/: CMakeLists.txt  c.sh  includes.hh  includes.hh.sort  includes.hh~
talk/xmpp/: CMakeLists.txt  includes.hh.sort  pingtask.cc  pingtask.h  rostermoduleimpl.cc  xmppclientsettings.h  xmppengineimpl.cc
(+3 files in other folders)
