if(UNIX)
  if(APPLE)
    #aux_source_directory(. echo_SRC)
    file(GLOB echo_SRC "*.cc" "*.mm")
  else()
    file(GLOB echo_SRC "*.cc" "*.cpp")
  endif()
endif()
add_definitions(-std=c++11)
add_executable(gxmpp_echo ${echo_SRC})
if(UNIX)
  if(APPLE)
    target_link_libraries(gxmpp_echo gxmpp "-framework Cocoa")
  else()
    target_link_libraries(gxmpp_echo gxmpp pthread rt)
  endif()
endif()

